# restFul-api-using-rust-rocket

./: Cargo.toml  database.sqlite-shm  database.sqlite-wal
src/: auth.rs  main.rs  models.rs  mongo_db_config.rs  mongo_db_methods.rs  repositories.rs
